# infercode

./: .gitpod.yaml  .gitpod.yml  MANIFEST.in  README.md  argument_parser.py  config.ini  generate_srcml_pkl.py  generate_subtree_stmts.py  generate_subtrees.py  infer.py  infer.sh  inferring_config.ini  install.sh  main_infercode.py  pypi  requirements.txt  run.sh  setup.cfg  setup.py  statements.csv  test.py  test2.py  test_2.py  test_infer.py  test_logging.py  test_trainer.py  test_visualization.py  train.py  train.sh  training_config.ini  training_script.py  training_script.sh  vector_visualization.py
client/: infercode_client.py  infercode_trainer.py
configs/: OJ_raw_small.ini
data_utils/: ast_util.py  data_loader.py  dataset_processor.py  subtree_vocab_extractor.py  token_vocab_extractor.py  tree_loader.py  tree_processor.py  vocabulary.py
docker/: Dockerfile  fast.sh  subtree.py
infercode/: __main__.py
java-small-test/: buckets-all-training.pkl  trees-training.pkl
network/: base_layer.py  infercode_network.py
old_version/: README.md  argument_parser.py  embeddings.csv  fast_pb2.py  generate_subtrees.py  infer.py  node_types.csv  train.sh
processing_script/: preprocess_data.py  preprocess_data.sh
script/: argument_parser.py  download_data.py  merge_node_types.py  preprocess_data.py  process_subtrees.py  retrieve_all_subtrees.py  retrieve_node_types.py  unify_node_types.py
scripts/: infercode
subtree_features/: java-small_stmt_features_train_10.csv  java-small_stmt_features_train_15.csv  java-small_stmt_features_train_20.csv  (+1 more)
tests/: test_infer.py  (+4 more)
(+288 files in other folders)
