[metadata]
name = infercode
version = 0.0.3
author = Nghi D. Q. Bui and Yijun Yu
author_email = y.yu@open.ac.uk
license=Apache 2.0
description = A Self-Supervised Learning of Code Representations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bdqnghi/infercode
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = 
    client
    data_utils
    network

python_requires = >=3.6

install_requires =
    bidict == 0.21.2
    dpu_utils == 0.2.19
    keras_radam == 0.15.0
    numpy == 1.19.4
    protobuf == 3.14.0
    scikit_learn == 0.24.0
    scipy == 1.5.2
    sentencepiece == 0.1.95
    tensorflow == 2.4.0
    tqdm == 4.55.1
    tree_sitter == 0.2.1
    utils == 1.0.1

[options.packages.find]
where = src
